Revert "fix overflow issues"
This reverts commit 8a953e33eb8e3a56ff304d268b07e7df4a0b903f.

--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -182,9 +182,8 @@ code {
 }
 
 pre {
+  width: fit-content;
   min-width: 50vw;
-  max-width: 100vw;
-  overflow: hidden;
   padding: 1rem;
   border-radius: 4px;
 }
@@ -192,7 +191,6 @@ pre {
 pre code {
   background-color: transparent;
   box-shadow: none;
-  overflow: scroll;
 }
 
 blockquote {
